FIX: service section with right content alignment

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2366,10 +2366,6 @@ section.team.section-padding {
     }
   }
 
-  .item {
-    margin-bottom: 50px;
-  }
-
   .tag-section {
     display: flex;
     align-items: center;
@@ -2460,7 +2456,7 @@ section.team.section-padding {
   .content-right {
     position: absolute;
     right: 0px;
-    top: 15%;
+    top: 0;
     width: 400px;
     opacity: 0;
     z-index: -1;
@@ -2473,6 +2469,38 @@ section.team.section-padding {
       top: 0%;
       z-index: 1;
       transform: scale(1);
+    }
+  }
+
+  .item {
+    margin-bottom: 50px;
+
+    &:nth-child(1) {
+      .content-right {
+        top: 30px;
+      }
+    }
+
+    &:nth-child(2) {
+      
+      .content-right {
+        top: 190px;
+      }
+    }
+
+    &:nth-child(3) {
+      
+      .content-right {
+        top: 350px;
+      }
+    }
+
+    &:last-child {
+      
+      .content-right {
+        top: auto;
+        bottom: 50px;
+      }
     }
   }
 
